fix: Update customer rating and guarantee description in product section

--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                     Herramienta profesional con 66Nm de potencia, motor sin escobillas y función de impacto. Incluye 2 baterías, cargador rápido y 47 accesorios. Todo lo que necesitas para trabajar sin límites.
                 </p>
                 <div class="hero__proof">
-                    ⭐⭐⭐⭐⭐ <span class="hero__proof-number">4.7/5</span> - Valorado por más de 500 clientes verificados
+                    ⭐⭐⭐⭐⭐ <span class="hero__proof-number">4.9/5</span> - Valorado por más de 500 clientes verificados
                 </div>
                 <button class="btn btn--primary btn--large btn--pulse" onclick="openModal('Taladro TOTAL 20V 1/2&quot; - Kit Completo', 179.99)">
                     Ver Precio y Disponibilidad
                 </button>
-                <p class="hero__guarantee">✓ Envío a toda Colombia | ✓ Garantía 1 Año por Daños de Fábrica | ✓ Devolución en 7 días</p>
+                <p class="hero__guarantee">✓ Envío a toda Colombia | ✓ Garantía 1 Año por Daños de Fábrica | ✓ Producto certificado</p>
             </div>
         </div>
     </section>
