fix: Update testimonial names and roles for accuracy and localization

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         <div class="problem__solution-item">
                             <span class="problem__check">🔧</span>
                             <div>
-                                <h4>47 accesorios en el maletín</h4>
+                                <h4>Accesorios incluidos</h4>
                                 <p>Brocas para metal, madera y concreto. Puntas, extensiones y todo organizado</p>
                             </div>
                         </div>
@@ -639,8 +639,8 @@
                     <div class="testimonial__author">
                         <div class="testimonial__avatar">👨‍🔧</div>
                         <div>
-                            <h4 class="testimonial__name">Carlos Martínez R.</h4>
-                            <p class="testimonial__role">Maestro Constructor - CDMX</p>
+                            <h4 class="testimonial__name">Carlos Andrés Martínez</h4>
+                            <p class="testimonial__role">Maestro Constructor - Bogotá</p>
                             <p class="testimonial__date">Compra verificada • Hace 2 meses</p>
                         </div>
                     </div>
@@ -656,7 +656,7 @@
                         <div class="testimonial__avatar">🪚</div>
                         <div>
                             <h4 class="testimonial__name">Miguel Ángel Torres</h4>
-                            <p class="testimonial__role">Carpintero Profesional</p>
+                            <p class="testimonial__role">Carpintero Profesional - Medellín</p>
                             <p class="testimonial__date">Compra verificada • Hace 1 mes</p>
                         </div>
                     </div>
@@ -672,7 +672,7 @@
                         <div class="testimonial__avatar">👨‍🏭</div>
                         <div>
                             <h4 class="testimonial__name">Roberto Fernández</h4>
-                            <p class="testimonial__role">Instalador Profesional</p>
+                            <p class="testimonial__role">Instalador Profesional - Cali</p>
                             <p class="testimonial__date">Compra verificada • Hace 3 semanas</p>
                         </div>
                     </div>
@@ -687,8 +687,8 @@
                     <div class="testimonial__author">
                         <div class="testimonial__avatar">👔</div>
                         <div>
-                            <h4 class="testimonial__name">Fernando Gutiérrez L.</h4>
-                            <p class="testimonial__role">Dueño de Empresa de Remodelación</p>
+                            <h4 class="testimonial__name">Fernando Gutiérrez López</h4>
+                            <p class="testimonial__role">Empresa de Remodelación - Barranquilla</p>
                             <p class="testimonial__date">Compra verificada • Hace 5 días</p>
                         </div>
                     </div>
@@ -704,7 +704,7 @@
                         <div class="testimonial__avatar">🏠</div>
                         <div>
                             <h4 class="testimonial__name">Jorge Ramírez</h4>
-                            <p class="testimonial__role">Entusiasta DIY</p>
+                            <p class="testimonial__role">Entusiasta DIY - Pereira</p>
                             <p class="testimonial__date">Compra verificada • Hace 1 semana</p>
                         </div>
                     </div>
@@ -720,7 +720,7 @@
                         <div class="testimonial__avatar">❄️</div>
                         <div>
                             <h4 class="testimonial__name">Luis Alberto Sánchez</h4>
-                            <p class="testimonial__role">Técnico de Climatización</p>
+                            <p class="testimonial__role">Técnico en Climatización - Cartagena</p>
                             <p class="testimonial__date">Compra verificada • Hace 2 semanas</p>
                         </div>
                     </div>
@@ -729,14 +729,14 @@
                 <div class="testimonial__card">
                     <div class="testimonial__rating">★★★★★</div>
                     <p class="testimonial__text">
-                        "El envío fue rapidísimo, llegó en 2 días. El maletín es muy resistente y todo viene 
-                        bien organizado. La garantía de 7 días me dio confianza, pero no la necesité. 10/10"
+                        "El envío a Bucaramanga fue rapidísimo, llegó en 3 días. El maletín es muy resistente y todo viene 
+                        bien organizado. La garantía de 1 año me dio confianza. Excelente compra. 10/10"
                     </p>
                     <div class="testimonial__author">
                         <div class="testimonial__avatar">📦</div>
                         <div>
-                            <h4 class="testimonial__name">Andrea Morales V.</h4>
-                            <p class="testimonial__role">Diseñadora de Interiores</p>
+                            <h4 class="testimonial__name">Andrea Morales Valencia</h4>
+                            <p class="testimonial__role">Diseñadora de Interiores - Bucaramanga</p>
                             <p class="testimonial__date">Compra verificada • Hace 4 días</p>
                         </div>
                     </div>
@@ -751,8 +751,8 @@
                     <div class="testimonial__author">
                         <div class="testimonial__avatar">🔨</div>
                         <div>
-                            <h4 class="testimonial__name">Ricardo Herrera P.</h4>
-                            <p class="testimonial__role">Herrería y Soldadura</p>
+                            <h4 class="testimonial__name">Ricardo Herrera Pérez</h4>
+                            <p class="testimonial__role">Herrería y Soldadura - Manizales</p>
                             <p class="testimonial__date">Compra verificada • Hace 3 meses</p>
                         </div>
                     </div>
@@ -768,7 +768,7 @@
                         <div class="testimonial__avatar">⚒️</div>
                         <div>
                             <h4 class="testimonial__name">José Manuel Cruz</h4>
-                            <p class="testimonial__role">Albañil Especializado</p>
+                            <p class="testimonial__role">Albañil Especializado - Santa Marta</p>
                             <p class="testimonial__date">Compra verificada • Hace 1 mes</p>
                         </div>
                     </div>
