fix: Update canonical and Open Graph URLs to point to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="taladro total 20v, taladro inalámbrico colombia, taladro profesional, herramientas total, ferremolina, taladro brushless, taladro percutor, herramientas dosquebradas, taladro con baterias">
     <meta name="author" content="FERREMOLINA - Distribuciones">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <link rel="canonical" href="https://www.ferremolina.com/taladro-total-20v">
+    <link rel="canonical" href="https://ferremolina.github.io/Taladro-Total20V/">
     
     <!-- Geo-targeting para Colombia -->
     <meta name="geo.region" content="CO-RIS">
@@ -22,8 +22,8 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Taladro TOTAL 20V Profesional - Kit Completo con 47 Accesorios">
     <meta property="og:description" content="Motor brushless 66Nm, 2 baterías 20V, cargador rápido y maletín. Ahorra $260.000 comprando directo. Envío a toda Colombia.">
-    <meta property="og:image" content="https://www.ferremolina.com/images/taladro-total-20v-kit.jpg">
-    <meta property="og:url" content="https://www.ferremolina.com/taladro-total-20v">
+    <meta property="og:image" content="https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg">
+    <meta property="og:url" content="https://ferremolina.github.io/Taladro-Total20V/">
     <meta property="og:site_name" content="FERREMOLINA">
     <meta property="og:locale" content="es_CO">
     <meta property="product:price:amount" content="390000">
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Taladro TOTAL 20V - Kit Completo $390.000">
     <meta name="twitter:description" content="Motor brushless 66Nm, 2 baterías, 47 accesorios. Envío a toda Colombia. Garantía 1 año.">
-    <meta name="twitter:image" content="https://www.ferremolina.com/images/taladro-total-20v-kit.jpg">
+    <meta name="twitter:image" content="https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg">
     
     <!-- WhatsApp Sharing -->
     <meta property="og:whatsapp" content="https://wa.me/573123467272?text=Hola%2C%20quiero%20información%20sobre%20el%20Taladro%20TOTAL%2020V">
@@ -73,7 +73,7 @@
       "@type": "Product",
       "name": "Taladro Inalámbrico TOTAL 20V 1/2 Pulgada con Impacto - Kit Completo",
       "description": "Taladro profesional inalámbrico 20V con motor brushless, 66Nm de torque, 2 baterías de litio, cargador rápido y 47 accesorios incluidos en maletín BMC.",
-      "image": "https://www.ferremolina.com/images/taladro-total-20v-kit.jpg",
+      "image": "https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg",
       "brand": {
         "@type": "Brand",
         "name": "TOTAL"
@@ -82,7 +82,7 @@
       "mpn": "TIDLI2006",
       "offers": {
         "@type": "Offer",
-        "url": "https://www.ferremolina.com/taladro-total-20v",
+        "url": "https://ferremolina.github.io/Taladro-Total20V/",
         "priceCurrency": "COP",
         "price": "390000",
         "priceValidUntil": "2026-02-28",
@@ -124,9 +124,9 @@
       "@type": "LocalBusiness",
       "name": "FERREMOLINA",
       "description": "Distribuidora de herramientas profesionales TOTAL en Dosquebradas, Risaralda. Venta de taladros, herramientas eléctricas y accesorios.",
-      "image": "https://www.ferremolina.com/images/logo-ferremolina.png",
-      "@id": "https://www.ferremolina.com",
-      "url": "https://www.ferremolina.com",
+      "image": "https://ferremolina.github.io/Taladro-Total20V/images/logo-ferremolina.png",
+      "@id": "https://ferremolina.github.io/Taladro-Total20V/",
+      "url": "https://ferremolina.github.io/Taladro-Total20V/",
       "telephone": "+57 312 346 7272",
       "email": "distribuciones.ferremolina@gmail.com",
       "address": {
