--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Bebas+Neue&family=Playfair+Display:wght@700;900&family=Oswald:wght@500;700&family=Raleway:wght@300;400;600;800&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8BTWVJ8P7R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-8BTWVJ8P7R');
+    </script>
+    
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
     {
