Configurar imagen Open Graph con 5.webp

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Taladro TOTAL 20V Profesional - Kit Completo con 47 Accesorios">
     <meta property="og:description" content="Motor brushless 66Nm, 2 baterías 20V, cargador rápido y maletín. Ahorra $260.000 comprando directo. Envío a toda Colombia.">
-    <meta property="og:image" content="https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg">
+    <meta property="og:image" content="https://ferremolina.github.io/Taladro-Total20V/images/5.webp">
     <meta property="og:url" content="https://ferremolina.github.io/Taladro-Total20V/">
     <meta property="og:site_name" content="FERREMOLINA">
     <meta property="og:locale" content="es_CO">
@@ -36,7 +36,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Taladro TOTAL 20V - Kit Completo $390.000">
     <meta name="twitter:description" content="Motor brushless 66Nm, 2 baterías, 47 accesorios. Envío a toda Colombia. Garantía 1 año.">
-    <meta name="twitter:image" content="https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg">
+    <meta name="twitter:image" content="https://ferremolina.github.io/Taladro-Total20V/images/5.webp">
     
     <!-- WhatsApp Sharing -->
     <meta property="og:whatsapp" content="https://wa.me/573123467272?text=Hola%2C%20quiero%20información%20sobre%20el%20Taladro%20TOTAL%2020V">
@@ -82,7 +82,7 @@
       "@type": "Product",
       "name": "Taladro Inalámbrico TOTAL 20V 1/2 Pulgada con Impacto - Kit Completo",
       "description": "Taladro profesional inalámbrico 20V con motor brushless, 66Nm de torque, 2 baterías de litio, cargador rápido y 47 accesorios incluidos en maletín BMC.",
-      "image": "https://ferremolina.github.io/Taladro-Total20V/images/taladro-total-20v-kit.jpg",
+      "image": "https://ferremolina.github.io/Taladro-Total20V/images/5.webp",
       "brand": {
         "@type": "Brand",
         "name": "TOTAL"
